# opetopictt

./: .gitignore  README.md  dune  dune-project  erictt.opam  eval.ml  lexer.mll  opetopictt-mode.el  opetopictt.opam  parser.mly  run.sh  syntax.ml  tasks.org  typecheck.ml
agda/: Ap.agda  Apd.agda  Base.agda  Cell.agda  CellCellOver.agda  CellDep.agda  CellOverCell.agda  Colorings.agda  Equality.agda  Examples.agda  Experiment.agda  HoTT.agda  J.agda  Kan.agda  LocalOpetopicType.agda  NewOpetopicTypes.agda  Opetopes.agda  OpetopicAgda.agda  OpetopicFibrations.agda  OpetopicTT.agda  OpetopicTT.agdai  OpetopicTTCat.agda  OpetopicTTCtx.agda  OpetopicTTMonad.agda  OpetopicType.agda  OpetopicTypeOver.agda  OpetopicTypePrime.agda  OpetopicTypes.agda  OpetopicUniverse.agda  Pi.agda  PiDep.agda  QuantifiedOpetopicType.agda  Scratch.agda  Sigma.agda  SigmaDep.agda  Slice.agda  Universe.agda  UniverseRefl.agda  opetopictt.agda-lib
agda/old/: Fibration.agda  LocalOpetopicType.agda  Opetopes.agda  Ott.agda
agda/scratch/: Universe.agda
emacs-mode/: opetopictt-mode.el
examples/: Modules.ott  Pi.ott  Prelude.ott  Shapes.ott  Sigma.ott  SigmaTwo.ott  Univ.ott  cells.ott  comps.ott  demo.ett  demo.ott  eta.ott  expand.ott  experiments.ott  modules.ott  new-cells.ott  opetopes.ott  path-judge.ott  pm.ott  positions.ott  prelude.ott  scratch.ott  sigma.ott  test.ott
lib/: Syntax.ml  cmd.ml  dune  eval.ml  expr.ml  io.ml  lexer.ml  parser.mly  reflexivity.ml  suite.ml  syntax.ml  term.ml  typecheck.ml  unify.ml  value.ml
ocaml/: eval.ml  monad.ml  optt.ml  parser.mly
ocaml/examples/: demo.ott
(+4 files in other folders)
