opam-version: "2.0"
maintainer: "ericfinster@gmail.com"
authors: ["Eric Finster"]
homepage: "https://github.com/ericfinster/opetopictt"
bug-reports: "https://github.com/ericfinster/opetopictt/issues"
dev-repo: "git://github.com/ericfinster/opetopictt.git"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
  
depends: [
  "dune" {build}
  "alcotest" {test}
]
